tests/lean/run_cmd_type.lean.expected.out
run_cmd_type.lean:5:8: error: type mismatch at application
  has_bind.and_then foo
term
  foo
has type
  lean.parser unit
but is expected to have type
  tactic unit
