tests/lean/run_cmd_type.lean
meta def foo: lean.parser unit :=
do
    return ()

run_cmd foo
